--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start:prod": "node ./dist/server.js ",
     "start:dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "build": "tsc",
+    "lint": "npx eslint",
+    "lint:fix": "npx eslint --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,6 +26,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "@eslint/js": "^9.3.0",
+    "eslint": "^8.57.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.10.0"
   }
 }
